# ag-experiment-labs

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  stream_output.txt  test_workflow.js  workflow_ui.py
agent-react-ui/: index.html  package-lock.json  package.json  vite.config.js
agent-react-ui/src/: App.jsx  index.css
notebook/: sample.ipynb
research_agent/agents/: __init__.py  _base.py  abstract_writer.py  citation_graph_agent.py  citation_validator.py  contradiction_agent.py  cross_domain_agent.py  dataset_agent.py  evaluation_agent.py  experiment_agent.py  gap_agent.py  idea_agent.py  matrix_agent.py  method_writer.py  parser_agent.py  results_writer.py  search_agent.py  swot_agent.py  trend_analysis_agent.py
research_agent/app/: ag-os-app.py  ag-os.py
research_agent/configs/: __init__.py  agents.yml  defaults.yml  loader.py  teams.yml  workflows.yml
research_agent/docs/: ARCHITECTURE.md
research_agent/prompts/: loader.py
research_agent/prompts/agents/: dataset.yml  (+16 more)
research_agent/teams/: __init__.py  _base.py  analysis_team.py  discovery_team.py  experiment_team.py  innovation_team.py  writing_team.py
research_agent/tools/: __init__.py  arxiv.py  core.py  crossref.py  github.py  huggingface.py  kaggle.py  openalex.py  paperswithcode.py  pubmed.py  semantic_scholar.py
research_agent/workflows/: __init__.py  research_workflow.py
src/: ag-os.py  research_agent.py  workflow_research.py
src/agents/: arxiv_agent.py  content_planner.py  hackernews_agent.py  web_agent.py  writer.py
ui/: index.html  script.js  styles.css
(+6 files in other folders)
