[project]
name = "ag-experiment-labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "agno[os]>=2.5.17",
    "ddgs>=9.14.1",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
]
